feat(#3264181): add Druxt Node Preview module

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "drupal/decoupled_router": "^2.0",
         "drupal/jsonapi_menu_items": "^1.0.0",
-        "drupal/jsonapi_views": "^1.0@beta"
+        "drupal/jsonapi_node_preview": "^1.0@beta",
+        "drupal/jsonapi_views": "^1.0"
     }
 }
