--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupal/druxt",
-    "description": "A bridge between frameworks, Drupal in the back, Nuxt.js in the front.",
+    "description": "DruxtJS; A bridge between frameworks, Drupal in the back, Nuxt.js in the front.",
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "authors": [
