chore(#3264181): update iframe style and behaviours

--- a/modules/druxt_node_preview/druxt_node_preview.libraries.yml
+++ b/modules/druxt_node_preview/druxt_node_preview.libraries.yml
@@ -1,4 +1,9 @@
-preview:
+druxt.node_preview:
+  js:
+    js/node_preview.js: {}
   css:
     theme:
-      css/preview.css: {}
+      css/node_preview.css: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
